[project]
name = "learn-sphinx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sepehr Shirkhanlou", email = "sepehr.shirkhanlou@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sphinx>=8.1.3",
]

[tool.uv]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
